Implement a relatively clean architecture that works with TornadoVM