@@ -6,6 +6,9 @@ plugins {
 group = 'com.github.polyrocketmatt.cyclone'
 version = '1.0-SNAPSHOT'
 
+sourceCompatibility = '21'
+targetCompatibility = '21'
+
 repositories {
     mavenCentral()
 
@@ -30,6 +33,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["--enable-preview"]
+    options.compilerArgs += ["-Xlint:preview"]
 }
 
 tasks.named('jar') {
